# TrailTag

./: .dockerignore  .editorconfig  .env.simple  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.zh-TW.md  CLAUDE.md  DEVELOPMENT_TASKS.md  Dockerfile  GEMINI.md  LICENSE  PRD_ref.md  README.en.md  README.md  README.zh.md  TESTING.md  debug_cache.py  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  run_e2e_tests.py  subtitle_detection_test_report.json  test_popup_state_recovery.js  test_subtitle_detection.py
.claude/: settings.local.json
.github/: copilot-commit-message-instructions.md  copilot-instructions.md  project.instructions.md
.github/chatmodes/: debug.chatmode.md  implementation-plan.chatmode.md
.github/instructions/: markdown.instructions.md  memory.instructions.md  python.instructions.md
.github/prompts/: comment.prompt.md  create_env.prompt.md  create_gitignore.prompt.md  create_pre_commit.prompt.md  implement.prompt.md  pre-commit.prompt.md  suggest-awesome-github-copilot-chatmodes.prompt.md  suggest-awesome-github-copilot-prompts.prompt.md  translate.prompt.md
.github/workflows/: ci-test.yml
crewai_storage/: agent_memories.json  analysis_results.json  job_memories.json
crewai_storage/crew_memory/: memories.json
docs/: scripts.md  startup_guide.md
plans/: DEVELOPMENT_TASKS.md  backend-plan.md  frontend-extension-plan.md  frontend-plan.md  openapi.json.json  project-proposal.md
scripts/: build.sh  build_backend.sh  build_deploy.sh  build_frontend.sh  check_status.sh  cleanup_memory.py  demo_config.sh  deploy_all.sh  migrate_redis_to_memory.py  run_memory_validation_tests.py  run_tests.sh  setup_dev.sh  start_api.sh  start_crew.sh
src/api/: README.md  __init__.py  cache_manager.py  cache_provider.py  main.py  models.py  routes.py  sse.py
src/api/cache/: __init__.py  cache_manager.py  cache_provider.py
src/api/core/: __init__.py  logger_config.py  models.py
src/api/middleware/: __init__.py  sse_handler.py
src/api/monitoring/: __init__.py  metrics.py  observability.py
src/api/routes/: __init__.py  main_routes.py
src/api/services/: __init__.py  crew_executor.py  execution_state.py  webhooks.py
src/common/: __init__.py
src/common/interfaces/: __init__.py
src/extension/: BUILD.md  CONFIG.md  README.md  SCRIPTS  api.js  api.ts  background.js  config.js  config.mjs  content.js  jest.config.cjs  manifest.json  map.js  map.ts  package.json  popup.bootstrap.mjs  popup.html  popup.js  popup.ts  service_worker.js  service_worker.ts  styles.css  test-utils.js  tsconfig.json  utils.js  utils.ts
src/extension/__tests__/: api.test.js  map.test.js  map.test.ts  popup.restore.test.ts  popup.test.js  popup.test.ts  test-utils.js  test-utils.ts  utils.test.js  utils.test.ts
src/extension/config/: inject-config.mjs  jest.config.cjs  jest.setup.js  popup.bootstrap.mjs  (+1 more)
src/trailtag/: README.md  __init__.py  crew.py  main.py  models.py
tests/: README.md  conftest.py  test_crew.py  test_main.py  test_subtitle_compression_tool.py  test_subtitle_detection.py  test_token_count_tool.py  test_youtube_subtitle_tool.py
tests/integration/: README_memory_validation.md  test_e2e.py  test_memory_migration.py  test_memory_system.py  test_simple_memory.py
(+67 files in other folders)
