[project]
name = "trailtag"
version = "0.1.0"
description = "TrailTag using crewAI"
authors = [{ name = "Brian Han", email = "sacahan@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentops>=0.4.17",
    "crewai[tools]>=0.141.0,<1.0.0",
    "playwright>=1.53.0",
    "pre-commit>=4.2.0",
    "pytest>=7.0.0",
    "pytest-playwright>=0.7.0",
]

[project.scripts]
trailtag = "trailtag.main:run"
run_crew = "trailtag.main:run"
train = "trailtag.main:train"
replay = "trailtag.main:replay"
test = "trailtag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
