[project]
name = "trailtag"
version = "0.1.0"
description = "TrailTag using crewAI"
authors = [{ name = "Brian Han", email = "sacahan@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentops>=0.4.17",
    "crewai[tools]>=0.141.0,<1.0.0",
    "playwright>=1.53.0",
    "pre-commit>=4.2.0",
    "pypdfium2==4.30.0",
    "webvtt-py>=0.5.1",
    "youtube-transcript-api>=1.2.1",
    "yt-dlp>=2025.7.21",
    "redis>=5.0.0",
    "sentence-transformers>=2.5.0",
    "langchain>=0.1.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.18",
]

[project.scripts]
trailtag = "trailtag.main:run"
run_crew = "trailtag.main:run"
train = "trailtag.main:train"
replay = "trailtag.main:replay"
test = "trailtag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-playwright>=0.7.0"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
