[project]
name = "trailtag"
version = "0.1.0"
description = "TrailTag using crewAI"
authors = [{ name = "Brian Han", email = "sacahan@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentops>=0.4.17",
    "crewai[tools]>=0.141.0,<1.0.0",
    "playwright>=1.53.0",
    "pre-commit>=4.2.0",
    "pypdfium2==4.30.0",
    "yt-dlp>=2025.7.21",
    "redis>=5.0.0",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "sse-starlette>=1.6.5",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.5",
    "aioredis>=2.0.1",
    "loguru>=0.7.2",
    "colorlog>=6.9.0",
    "openai>=1.95.1",
    "langtrace-python-sdk>=3.8.21",
    "psutil>=7.0.0",
    "tiktoken>=0.9.0",
    "spacy>=3.8.7",
    "transformers>=4.46.3",
    "youtube-comment-downloader>=0.1.78",
    "nltk>=3.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "httpx>=0.28.1",
]

[project.scripts]
trailtag = "trailtag.main:run"
run_crew = "trailtag.main:run"
train = "trailtag.main:train"
replay = "trailtag.main:replay"
test = "trailtag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.envs.test]
dependencies = ["pytest>=7.0.0", "pytest-playwright>=0.7.0"]

[dependency-groups]
dev = ["pytest>=8.4.1"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
